fix: loading modal z-index

--- a/app/src/ui/style/tokens.scss
+++ b/app/src/ui/style/tokens.scss
@@ -36,6 +36,7 @@ $z-navigation: 200;
 $z-widget-notification: 500;
 $z-modal-overlay: 999;
 $z-modal-content: 1000;
+$z-modal-loading: 1200;
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
